tests/error/poly_errors/inst_return_mismatch.err
Error: Type mismatch (at $FILE:13:14)
   | 
11 | @guppy
12 | def main(x: bool) -> None:
13 |     y: None = foo(x)
   |               ^^^^^^ Expected expression of type `None`, got `bool`

Guppy compilation failed due to 1 previous error
